--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+  
 
     <link
       rel="icon"
@@ -19,23 +19,35 @@
   <body>
     <div class="grid-container">
       <div class="grid-item item1">
-        <div class="identity">
+        <div class="identity" id="quotation">
           <div class="img-container">
             <img src="images/image-daniel.jpg" alt="daniel's photo" />
             <p>
               <span><b>Daniel Clifford</b></span
               ><br />Verified Graduate
             </p>
+            <svg width="104" height="102" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M104 102V59.727H84.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C95.01 25.86 98.909 22.257 104 19.375V0c-9.758 4.27-17.712 9.874-23.864 16.813-6.151 6.939-10.712 14.545-13.681 22.818C63.485 47.904 62 59.941 62 75.74V102h42zm-62 0V59.727H22.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C33.01 25.86 36.909 22.257 42 19.375V0c-9.652 4.27-17.58 9.874-23.784 16.813C12.01 23.752 7.424 31.358 4.455 39.631 1.485 47.904 0 59.941 0 75.74V102h42z"
+                fill="#A775F1"
+                fill-rule="nonzero"
+              />
+            </svg>
           </div>
-        </div>
+        
 
-        <h2>
+         <h2>
           I received a job offer mid-course, and the subjects I learned
           <br />were current, if not more so, in the company I joined. I
           <br />honestly feel I got every penny’s worth.
-        </h2>
-
-        <p>
+         </h2><br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         
+         <p>
           “ I was an EMT for many years before I joined the bootcamp. I’ve been
           looking to make a <br />transition and have heard some people who had
           an amazing experience here. I signed up for <br />the free intro
@@ -45,7 +57,8 @@
           completing the course, I’ve <br />
           successfully switched careers, working as a Software Engineer at a VR
           startup. ”
-        </p>
+         </p>
+        </div>
       </div>
 
       <div class="grid-item item2">
